# ocr_prototype

./: .gitignore  Dockerfile.frontend  Dockerfile.ml  Dockerfile.ocr  Dockerfile.preprocessor  README.md  app.py  batch_image_processor.py  cache.db  docker-compose.ocr.yml  docker-compose.yml  local_change_the_result.py  local_project_setting.py  local_train.py  ml_backend_app.py  ocr_server.py  project_setting.py  pyproject.toml  train.py
frontend/: app.py
ocr_preprocessor/: image_preprocessor.py  requirements.txt
ocr_processors/: __init__.py  ocr_language_manager.py
ocr_server/: ocr_server.py  pyproject.toml
ocr_server/ocr_processors/: __init__.py  ocr_processor.py
preprocessor/: app.py  batch_image_preprocessor.py  image_preprocessor.py  requirements.txt
